# OpenTyrian2000-Enhanced

./: .gitignore  README.md  RELEASE_NOTES.md  build-all.ps1  notes.md  rebuild-all.bat
src/: animlib.c  backgrnd.c  backgrnd.h  config.c  config.h  console_platform.h  crashlog.c  crashlog.h  crashlog_state.c  custom_weapon.c  custom_weapon.h  destruct.c  endless.c  endless.h  endless_combat.c  endless_course.c  endless_internal.h  endless_level.c  endless_levelprofile.h  endless_mods.c  endless_perks.c  endless_rng.c  endless_save.c  endless_shop.c  episodes.c  episodes.h  file.c  fluid_music.c  fluid_music.h  fonthand.c  fonthand.h  game_menu.c  game_menu.h  helptext.c  helptext.h  joystick.c  jukebox.c  keyboard.c  keyboard.h  loudness.c  (+41 more)
src/midiproc/: VENDORED.md
src/midiproc/compat/: common_compat.h  os_compat.c  os_compat.h  print_compat.h  string_compat.h
src/midiproc/src/: MIDIContainer.cpp  MIDIContainer.h  MIDIProcessor.h  MIDIProcessorHMI.cpp  MIDIProcessorHMP.cpp  MIDIProcessorLDS.cpp  MIDIProcessorMDS.cpp  MIDIProcessorMUS.cpp  MIDIProcessorRCP.cpp  MIDIProcessorRIFF.cpp  MIDIProcessorSMF.cpp  MIDIProcessorXMI.cpp  Range.h  midiproc.cpp  midiproc.h
stuff/fluidsynth/lib/x64/: libfluidsynth-3.lib
switch/: Makefile  README.md  build.sh
switch/romfs/: PUT_DATA_FILES_HERE.txt
tools/endless_levelprofile/: README.md  gen_profile.py  threat.csv
visualc/: opentyrian.props.template  opentyrian.vcxproj  sdl_paths.props.template
vita/: CMakeLists.txt  README.md  build.ps1  build.sh  make_livearea.ps1
vita/sce_sys/livearea/contents/: template.xml
